force-app/main/default/objects/dw_ecard_app_part_shortage__x/dw_ecard_app_part_shortage__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_app$part_shortage</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_app$part_shortage</externalName>
    <label>dw_ecard_app$part_shortage</label>
    <pluralLabel>dw_ecard_app$part_shortage</pluralLabel>
</CustomObject>