force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/buspart_id__c.field-meta.xml
<CustomField>
    <fullName>buspart_id__c</fullName>
    <description>buspart_id</description>
    <externalDeveloperName>buspart_id</externalDeveloperName>
    <label>buspart_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>