force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/buyer__c.field-meta.xml
<CustomField>
    <fullName>buyer__c</fullName>
    <description>buyer</description>
    <externalDeveloperName>buyer</externalDeveloperName>
    <label>buyer</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>