force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/carrier_arrival_text__c.field-meta.xml
<CustomField>
    <fullName>carrier_arrival_text__c</fullName>
    <description>carrier_arrival_text</description>
    <externalDeveloperName>carrier_arrival_text</externalDeveloperName>
    <label>carrier_arrival_text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>