force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/carrier_text__c.field-meta.xml
<CustomField>
    <fullName>carrier_text__c</fullName>
    <description>carrier_text</description>
    <externalDeveloperName>carrier_text</externalDeveloperName>
    <label>carrier_text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>