force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/custom_part_name__c.field-meta.xml
<CustomField>
    <fullName>custom_part_name__c</fullName>
    <description>custom_part_name</description>
    <externalDeveloperName>custom_part_name</externalDeveloperName>
    <label>custom_part_name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>