force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/date_received__c.field-meta.xml
<CustomField>
    <fullName>date_received__c</fullName>
    <description>date_received</description>
    <externalDeveloperName>date_received</externalDeveloperName>
    <label>date_received</label>
    <type>DateTime</type>
</CustomField>