force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/is_b_whs_kit__c.field-meta.xml
<CustomField>
    <fullName>is_b_whs_kit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is_b_whs_kit</description>
    <externalDeveloperName>is_b_whs_kit</externalDeveloperName>
    <label>is_b_whs_kit</label>
    <type>Checkbox</type>
</CustomField>