force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/part_shortage_id__c.field-meta.xml
<CustomField>
    <fullName>part_shortage_id__c</fullName>
    <description>part_shortage_id</description>
    <externalDeveloperName>part_shortage_id</externalDeveloperName>
    <label>part_shortage_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>