force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/planner_code__c.field-meta.xml
<CustomField>
    <fullName>planner_code__c</fullName>
    <description>planner_code</description>
    <externalDeveloperName>planner_code</externalDeveloperName>
    <label>planner_code</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>