force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/po_no__c.field-meta.xml
<CustomField>
    <fullName>po_no__c</fullName>
    <description>po_no</description>
    <externalDeveloperName>po_no</externalDeveloperName>
    <label>po_no</label>
    <length>50</length>
    <type>Text</type>
</CustomField>