force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/quantity__c.field-meta.xml
<CustomField>
    <fullName>quantity__c</fullName>
    <description>quantity</description>
    <externalDeveloperName>quantity</externalDeveloperName>
    <label>quantity</label>
    <precision>16</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>