force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/shortage_cause_id__c.field-meta.xml
<CustomField>
    <fullName>shortage_cause_id__c</fullName>
    <description>shortage_cause_id</description>
    <externalDeveloperName>shortage_cause_id</externalDeveloperName>
    <label>shortage_cause_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>