force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/tracking__c.field-meta.xml
<CustomField>
    <fullName>tracking__c</fullName>
    <description>tracking</description>
    <externalDeveloperName>tracking</externalDeveloperName>
    <label>tracking</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>