force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/vendor_name__c.field-meta.xml
<CustomField>
    <fullName>vendor_name__c</fullName>
    <description>vendor_name</description>
    <externalDeveloperName>vendor_name</externalDeveloperName>
    <label>vendor_name</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>