force-app/main/default/objects/dw_ecard_app_part_shortage__x/fields/vendor_number__c.field-meta.xml
<CustomField>
    <fullName>vendor_number__c</fullName>
    <description>vendor_number</description>
    <externalDeveloperName>vendor_number</externalDeveloperName>
    <label>vendor_number</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>